manifests/03-networkpolicy-console.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: openshift-console
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: Console
    kubernetes.io/description: >-
      Allow all ingress and egress traffic in the openshift-console
      namespace. The console requires network access to serve the UI
      and communicate with the Kubernetes API and other cluster
      services.
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
